Cambios para el desafio

--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
                 <h3>HABILIDADES</h3>
                 <ul>
                     <li>Planificación proyectos</li>
-                    <li>Orientación al cliente</li>
+                    <li>Tolerancia al estrés</li>
                     <li>Detección de mejoras</li>
                     <li>Toma de requerimientos</li>
                     <li>Propuestas técnicas</li>
                     <li>Gestión de equipos</li>
+                    <li>Orientación al cliente</li>
                     <li>Actitud responsable</li>
-                    <li>Tolerancia al estrés</li>
                 </ul>
                 <hr>
                     <h3>INTERESES</h3>
@@ -156,7 +156,7 @@
                 <div id="Educacion" >
                     <b>EDUCACIÓN</b><br>
                     <ul style="font-weight: 300">
-                        <li><b>Bootcam Frontend-react</b><br>Desafio Latam Chile, En Desarrollo</li>
+                        <li><b>Bootcam Frontend-React</b><br>Desafio Latam Chile, En Desarrollo</li>
                         <li><b>Bootcam Diseño UX/UI</b><br>Desafio Latam Chile, En Desarrollo</li>
                         <li><b>Diplomado en Herramientas para la Transformación Digital.</b><br>U. Adolfo Ibáñez, Santiago 2021</li>
                         <li><b>Diplomado Gestión de Operaciones y Trasformación Digital. </b><br>U. Católica de Chile, Santiago 2019</li>
@@ -166,6 +166,8 @@
                 </div>
             </div>
         </section>
+
+        
 </body>
 
 </html>
